# nhsdigital.national-document-repository

./: .gitignore  .lintstagedrc  .tool-versions  Makefile  README.md  SECURITY.md  package-lock.json  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/src/: create.sh  motd.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: automated-pr-checklist-validator.yml  automated-pr-validator.yml  automated-sbom-repo-scan.yml  base-cypress-build.yml  base-cypress-smoketest.yml  base-cypress-test-all-env.yml  base-cypress-test.yml  base-data-collection.yml  base-deploy-ui.yml  base-e2e-backendtest.yml  base-e2e-fhir-backendtest.yml  base-e2e-mns.yml  base-lambda-layer-reusable-publish-all.yml  base-lambda-layer-reusable-publish.yml  base-lambdas-check-packages.yml  base-lambdas-edge-deploy.yml  base-lambdas-reusable-deploy-all.yml  base-lambdas-reusable-deploy.yml  base-lambdas-reusable-test.yml  base-run-bulk-upload.yml  base-run-disable-pds-stub.yml  base-vitest-test.yml  bulk-upload-300-test.yml  codeql.yml  data-collection-deploy-to-sandbox.yml  full-deploy-to-pre-prod.yml  full-deploy-to-prod.yml  full-deploy-to-sandbox.yml  git-rename-tag.yml  lambdas-deploy-feature-to-sandbox.yml  lambdas-deploy-to-pre-prod.yml  lambdas-deploy-to-prod.yml  lambdas-deploy-to-test.yml  lambdas-dev-to-main-ci.yml  ndr-e2e-backend-test-ci.yml  ndr-e2e-test-sandbox.yml  ndr-smoketest-ui-test-ci.yml  performance-base-run-bulk-upload.yml  performance-run-bulk-upload-test.yml  pr_checks.yml  (+11 more)
apim/: specification.yaml
app/: .eslintrc  Dockerfile  README.md  eslint.config.mts  main.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/docker/: nginx.conf
app/public/: cookie-consent.min.js
app/src/: App.tsx  main.tsx
docs/ui-app/: README.md  build-and-deploy.md  components-and-styling.md  data-models.md  e2e-testing.md  error-handling.md  how-to-add-a-page.md  observability.md  routing.md  state-and-api.md  ui-testing.md  utils.md
lambdas/: LAMBDA_OVERVIEW.md  README.md  ruff.toml
lambdas/enums/: cloudwatch_logs_reporting_message.py  document_review_accepted_querystring_parameters.py  document_review_reason.py  document_review_status.py  document_status.py  dynamo_filter.py  environment.py  feature_flags.py  infrastructure.py  lambda_error.py  logging_app_interaction.py  metadata_field_names.py  metadata_report.py  mtls.py  report_distribution_action.py  report_type.py  review_status.py  snomed_codes.py  supported_document_types.py  upload_forbidden_file_extensions.py  user_restriction_accepted_querystring_parameters.py  virus_scan_result.py
lambdas/handlers/: access_audit_handler.py  authoriser_handler.py  bulk_upload_handler.py  bulk_upload_metadata_handler.py  bulk_upload_metadata_preprocessor_handler.py  bulk_upload_metadata_processor_handler.py  bulk_upload_report_handler.py  concurrency_controller_handler.py  create_document_reference_handler.py  delete_document_reference_handler.py  delete_fhir_document_reference_handler.py  document_manifest_job_handler.py  document_reference_search_handler.py  document_reference_virus_scan_handler.py  document_review_processor_handler.py  document_status_check_handler.py  dynamodb_migration_handler.py  edge_presign_handler.py  fhir_document_reference_search_handler.py  generate_document_manifest_handler.py  get_document_reference_handler.py  get_document_review_handler.py  get_fhir_document_reference_handler.py  get_report_by_ods_handler.py  im_alerting_handler.py  lloyd_george_record_stitch_handler.py  manage_nrl_pointer_handler.py  migration_dynamodb_handler.py  migration_dynamodb_segment_handler.py  mns_notification_handler.py  patch_document_review_handler.py  post_document_review_handler.py  post_fhir_document_reference_handler.py  put_document_review_handler.py  report_distribution_handler.py  report_orchestration_handler.py  report_s3_content_handler.py  review_document_status_check_handler.py  review_processor_handler.py  search_document_reference_history_handler.py  (+10 more)
lambdas/models/: auth_policy.py  document_reference.py  document_review.py  pds_models.py  ssh_key.py  staging_metadata.py  upload_file_config.py
lambdas/requirements/: requirements_edge_lambda.txt  requirements_github_runner.txt  requirements_test.txt
lambdas/scripts/: MigrationBase.py  README.md  bulk_upload_projector.py  dynamodb_migration_prmp_179.py  (+5 more)
memory/: feedback_venv.md
scripts/: build_and_deploy_sandbox.sh  format.sh  markdown-validator.sh
(+1006 files in other folders)
