[tool.poetry]
name = "ndr"
version = "0.0.1"
description = "National Document Repository"
readme = "README.md"
packages = [{ include = "lambdas" }]

[tool.poetry.dependencies]
python = "^3.11.14"
ruff = "0.12.8"
ruff-lsp = "0.0.62"

[tool.poetry.group.test.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"
pytest-mock = "3.11.1"
pytest-unordered = "0.6.0"
requests-mock = "1.11.0"
freezegun = "1.5.4"
MarkupSafe = "2.1.3"
black = "24.3.0"
isort = "7.0.0"
pip-audit = "2.6.1"
syrupy = "4.9.1"

[tool.poetry.group.edge_lambda.dependencies]
boto3 = "1.42.1"
pydantic = "2.11.10"
PyJWT = "2.9.0"
inflection = "0.5.1"

[tool.poetry.group.alerting_lambda.dependencies]
PyJWT = "2.9.0"
boto3 = "1.42.1"
inflection = "0.5.1"
jinja2 = "3.1.6"
pydantic = "2.11.10"
requests = "2.32.4"

[tool.poetry.group.core_lambda.dependencies]
PyJWT = { version = "2.9.0", extras = ["crypto"] }
boto3 = "1.42.1"
inflection = "0.5.1"
oauthlib = "3.2.2"
pydantic = { version = "2.11.10", extras = ["email"] }
pypdf = "6.7.3"
requests = "2.32.4"
regex = "2023.12.25"
pikepdf = "8.4.0"

[tool.poetry.group.data_lambda.dependencies]
polars = "1.31.0"

[tool.poetry.group.files_lambda.dependencies]
msoffcrypto-tool = "6.0.0"

[tool.poetry.group.reports_lambda.dependencies]
openpyxl = "3.1.5"
reportlab = "4.3.1"
pyzipper = "^0.3.6"

[tool.isort]
profile = "black"
src_paths = ["lambdas"]
known_first_party = ["enums", "handlers", "models", "repositories", "services", "utils"]
