[tool.poetry]
name = "ndr"
version = "0.0.1"
description = "National Document Repository"
readme = "README.md"
packages = [{ include = "lambdas" }]

[tool.poetry.dependencies]
python = "^3.11.14"
ruff = "0.15.4"
ruff-lsp = "0.0.62"

[tool.poetry.group.test.dependencies]
pytest = "7.4.4"
pytest-cov = "4.1.0"
pytest-mock = "3.15.1"
pytest-unordered = "0.7.0"
requests-mock = "1.12.1"
freezegun = "1.5.5"
MarkupSafe = "2.1.5"
black = "24.10.0"
isort = "7.0.0"
pip-audit = "2.10.0"
syrupy = "4.9.1"

[tool.poetry.group.edge_lambda.dependencies]
boto3 = "1.42.59"
pydantic = "2.12.5"
PyJWT = "2.11.0"
inflection = "0.5.1"

[tool.poetry.group.alerting_lambda.dependencies]
PyJWT = "2.11.0"
boto3 = "1.42.59"
inflection = "0.5.1"
jinja2 = "3.1.6"
pydantic = "2.12.5"
requests = "2.32.5"

[tool.poetry.group.core_lambda.dependencies]
PyJWT = { version = "2.11.0", extras = ["crypto"] }
boto3 = "1.42.59"
inflection = "0.5.1"
oauthlib = "3.3.1"
pydantic = { version = "2.12.5", extras = ["email"] }
pypdf = "6.7.5"
requests = "2.32.5"
regex = "2023.12.25"
pikepdf = "8.15.1"

[tool.poetry.group.data_lambda.dependencies]
polars = "1.31.0"

[tool.poetry.group.files_lambda.dependencies]
msoffcrypto-tool = "6.0.0"

[tool.poetry.group.reports_lambda.dependencies]
openpyxl = "3.1.5"
reportlab = "4.4.10"
pyzipper = "0.3.6"

[tool.isort]
profile = "black"
src_paths = ["lambdas"]
known_first_party = ["enums", "handlers", "models", "repositories", "services", "utils"]
